--- a/hack/generated-templates/updater-template.yaml
+++ b/hack/generated-templates/updater-template.yaml
@@ -12,4 +12,32 @@ parameters:
   required: true
 metadata:
   name: pagerduty_cluster_stats
-objects: []
+objects:
+- kind: DeploymentConfig
+  apiVersion: v1
+  metadata:
+    name: pagerduty-cluster-stats
+  spec:
+    template:
+      metadata:
+        labels:
+          name: frontend
+      spec:
+        containers:
+        - name: pagerduty-cluster-stats
+          image: openshift/origin-ruby-sample
+          ports:
+          - containerPort: 8080
+            protocol: TCP
+    replicas: 1
+- kind: DeploymentConfig
+  apiVersion: v1
+  metadata:
+    name: pagerduty-cluster-stats
+  spec:
+    template:
+      spec:
+        containers:
+        - name: pagerduty-cluster-stats
+          image: ${REGISTRY_IMG}:${IMAGE_TAG}
+    replicas: 1
