--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /V3V4_Cluster_Info/tempfilev3osd
 /PD_Incidents/api_token.txt
 /Telemeter_Data/telemeter_token.txt
+/sre_ldap/LDAP_DATA
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
